# reporting-tool

./: Cargo.toml  README.md  report  timestamp_str
.cargo/: config
cypress/reports/mochawesome/: mochawesome.html  mochawesome.json
src/: main.rs
