[package]
name = "reporting-tool"
version = "0.1.0"
authors = ["Pedro Silva <pedro@jibble.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3.16"
chrono = "0.4"
zip = "0.5"
walkdir = "2"